[tool.poetry]
name = "pdftoimage_basic"
version = "0.1.0"
description = "A basic app to convert pdfs to images"
authors = ["ananyalahiri2003 <ananyalahiri2003@yahoo.co.uk>"]
license = "MIT"
readme = "README.md"
packages = [
    {"include" = "src", from = "."}
]

[tool.poetry.dependencies]
python          = ">=3.10,<3.13"
python-dotenv   = "^1.0.0"        # for loading your .env
pymupdf = "^1.25.5"
click = "^8.2.0"
fitz = "^0.0.1.dev2"
frontend = "^0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
